# video-download-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TAILSCALE.md  docker-compose.yml  extractor_config.example.py  main.py  pyproject.toml
templates/: index.html
ts-video-download/config/: mcp.json
